--- a/app/src/main/res/layout/activity_balance.xml
+++ b/app/src/main/res/layout/activity_balance.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context=".BalanceActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_balance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
