feat: create the toolbar

--- a/app/src/main/res/layout/activity_invoice.xml
+++ b/app/src/main/res/layout/activity_invoice.xml
@@ -7,7 +7,10 @@
     android:orientation="vertical"
     tools:context=".InvoiceActivity">
 
-
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_invoice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/textView11"
