--- a/app/src/main/res/layout/activity_invoice.xml
+++ b/app/src/main/res/layout/activity_invoice.xml
@@ -10,14 +10,14 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_invoice"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Resumo das Faturas"
         android:layout_marginTop="80dp"
+        android:text="Resumo das Faturas"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="34sp"
@@ -27,9 +27,9 @@
         android:id="@+id/textView12"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:text="Data de Vencimento: 05/05/2022"
-        android:layout_marginStart="30dp"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -48,8 +48,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="30dp"
-        android:text="Pagar fatura"
         android:padding="10dp"
+        android:text="Pagar fatura"
+        android:textAllCaps="false"
         android:textSize="16sp"
         android:textStyle="bold" />
 </LinearLayout>
