--- a/app/src/main/res/layout/activity_saving.xml
+++ b/app/src/main/res/layout/activity_saving.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     tools:context=".SavingActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_saving"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/textView10"
         android:layout_width="match_parent"
